Updated index and CSS

--- a/index.html
+++ b/index.html
@@ -9,26 +9,20 @@
 </head>
 
 <body>
-	<div id="navbar">
-		<ul>
+	<ul class="nav">
 		<li>+Sasoon</li>
 		<li>Gmail</li>
 		<li>Images</li>
-		<li class="icons grid">Dots</li>
-		<li>bell icon</li>
-		<li>plus icon</li>
+		<li><a class="apps"></a></li>
+		<li><a class="bell"></a></li>
+		<li><a class="share">Share</a></li>
 		<li>blue persona circle</li>
 	</ul>
-	</div>
 	<div id="content">
 		<img src="images/logo11w.png">
 		Australia
 	</div>
 
-
-	<div class="crop">
-     <img src="images/icons.png" alt="alt" />
-</div>
 
 
 </body>
