--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 
 <body>
 	<ul class="nav">
-		<li>+Sasoon</li>
-		<li>Gmail</li>
+		<li>Mail</li>
 		<li>Images</li>
 		<li><a class="apps"></a></li>
-		<li><a class="bell"></a></li>
-		<li><a class="share">Share</a></li>
-		<li>blue persona circle</li>
+		<li>youremail@domain.com.au</li>
 	</ul>
 	<div id="content">
 		<img src="images/logo11w.png">
-		Australia
+
 	</div>
 
+		<span>Australia</span>
 
-
+	<form><input type="text" name="search" size="90"></form>
+	<button class="btn1" type="button">Google Search</button>
+	<button class="btn2" type="button">I'm Feeling Lucky</button>
 </body>
 </html>
