--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <DOCTYPE html>
 <html>
-
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"/>
   <link href="css/main.css" media="all" rel="stylesheet" />
+  <link href="css/lemonade.css" media="all" rel="stylesheet" />
   <title>Google</title>
 </head>
 
 <body>
-	<ul class="nav">
-		<li>Mail</li>
-		<li>Images</li>
-		<li><a class="apps"></a></li>
-		<li>youremail@domain.com.au</li>
-	</ul>
-	<div id="content">
+	<div class="grid-container outline">
+		<ul class="nav">
+			<li>Mail</li>
+			<li>Images</li>
+			<li><a class="apps"></a></li>
+			<li>youremail@domain.com.au</li>
+		</ul>
+		<div class="google">
 		<img src="images/logo11w.png">
-
+			<span>Australia</span>
+				<div class="content">
+		<form><input type="text" name="search" size="90"></form>
+		<button class="btn1" type="button">Google Search</button>
+		<button class="btn2" type="button">I'm Feeling Lucky</button>
+	</div>
 	</div>
 
-		<span>Australia</span>
-
-	<form><input type="text" name="search" size="90"></form>
-	<button class="btn1" type="button">Google Search</button>
-	<button class="btn2" type="button">I'm Feeling Lucky</button>
+</div>
 </body>
 </html>
