Amended Nav bar with an image, updated general CSS

--- a/index.html
+++ b/index.html
@@ -10,17 +10,12 @@
 
 <body>
 	<div class="grid-container outline">
-		<ul class="nav">
-			<li>Mail</li>
-			<li>Images</li>
-			<li><a class="apps"></a></li>
-			<li>youremail@domain.com.au</li>
-		</ul>
+		<img class="nav" src="Images/Capture.png">
 		<div class="google">
 		<img src="images/logo11w.png">
 			<span>Australia</span>
 				<div class="content">
-		<form><input type="text" name="search" size="90"></form>
+		<form><input type="text" name="search" size="70"></form>
 		<button class="btn1" type="button">Google Search</button>
 		<button class="btn2" type="button">I'm Feeling Lucky</button>
 	</div>
